Fix: hr line on firefox

--- a/src/Readable Font Min/options/options.css
+++ b/src/Readable Font Min/options/options.css
@@ -1,1 +1,1 @@
-#title,h1{font-size:30px;font-weight:900}#title{text-align:center}#readable,#title{font-family:"Noto Serif",serif}body{margin:20px}h1,h2,p,table{font-family:"Noto Sans",sans-serif}h2,table{font-size:24px;font-weight:800}p{font-size:16px}pre{font-size:12px;font-family:"D2 Coding",monospace}
+#readable,#title{font-family:"Noto Serif",serif}#title,h1{font-size:30px;font-weight:900}#title{text-align:center}body{margin:20px}h1,h2,p,table{font-family:"Noto Sans",sans-serif}h1::after{content:'';display:block;margin-top:15px;border-top:1.5px solid #9A9A9A}h2,table{font-size:24px;font-weight:800}p{font-size:16px}pre{font-size:12px;font-family:"D2 Coding",monospace}
